--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -7,7 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs
         /jquery/3.6.0/jquery.min.js"></script>
     <script> 
-        jQuery(document).ready(function)
+        jQuery(document).ready(function(){
+
+        });
     </script>
     
         <title>WAK-A-MOLE</title>
