--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs
         /jquery/3.6.0/jquery.min.js"></script>
+
+        <STYLE>
+            body{ width:100%; height: 100%; overflow: hidden;}
+            .mole{
+        background-color: rgb(128, 64, 0);
+        border-radius: 20px;
+        height: 100%;
+        width: 10%;
+        position: absolute;
+top: 100%
+            }
+
+        </STYLE>
     <script> 
         jQuery(document).ready(function(){
 
