--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -11,12 +11,21 @@
             body{ width:100%; height: 100%; overflow: hidden;}
             .mole{
         background-color: rgb(128, 64, 0);
-        border-radius: 20px;
+        border-radius: 100px;
         height: 100%;
         width: 10%;
         position: absolute;
-top: 100%
+        top: 100%
             }
+        .left_ear{
+        background-color: rgb(128, 64, 0);
+        border-radius: 100px;
+        position: absolute;
+        left: 0px;
+        float: left;
+        min-width: 30%;
+        padding-top: 30%;
+        }
 
         </STYLE>
     <script> 
@@ -31,9 +40,11 @@ top: 100%
 
 </head>
 <body>
-    <div class="mole" id="mole1"> </div>
-    <div class="mole" id="mole2"> </div>
-    <div class="mole" id="mole3"> </div>
+    <div class="mole" id="mole1"> <div class="left_ear"><div class="right_ear"></div></div>
+    <div class="mole" id="mole2"><div class="left_ear">
+        <div class="right_ear"> </div>
+    <div class="mole" id="mole3"><div class="left_ear">
+        <div class="right_ear"></div> </div>
 
 
 
