--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -15,7 +15,8 @@
         height: 100%;
         width: 10%;
         position: absolute;
-        top: 100%
+        top: 100%;
+        background-image: url("/images/mole.png");
             }
         .left_ear{
         background-color: rgb(128, 64, 0);
@@ -26,7 +27,16 @@
         min-width: 30%;
         padding-top: 30%;
         }
-
+.right_ear{
+        background-color: rgb(128, 64, 0);
+        border-radius: 100px;
+        position: absolute;
+        left: 0px;
+        float: right;
+        min-width: 30%;
+        padding-top: 30%;
+        left: 70%
+        }
         </STYLE>
     <script> 
         jQuery(document).ready(function(){
