--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -11,12 +11,15 @@
             body{ width:100%; height: 100%; overflow: hidden;}
             .mole{
         background-color: rgb(128, 64, 0);
-        border-radius: 100px;
+        border-radius: 100px 100px 0px 0px;
         height: 100%;
         width: 10%;
         position: absolute;
         top: 100%;
         background-image: url("/images/mole.png");
+        background-size: 100%;
+        background-repeat: no-repeat;
+        background-position: 0% 5%; 
             }
         .left_ear{
         background-color: rgb(128, 64, 0);
@@ -26,6 +29,7 @@
         float: left;
         min-width: 30%;
         padding-top: 30%;
+        z-index: -1;
         }
 .right_ear{
         background-color: rgb(128, 64, 0);
@@ -37,6 +41,11 @@
         padding-top: 30%;
         left: 70%
         }
+
+        #mole1 { left: 10%;}
+        #mole2 { left: 45%;} 
+        #mole3 { left: 80%;}
+
         </STYLE>
     <script> 
         jQuery(document).ready(function(){
