--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -8,57 +8,19 @@
         /jquery/3.6.0/jquery.min.js"></script>
 
         <STYLE>
-            body{ width:100%; height: 100%; overflow: hidden;}
-            .mole{
-        background-color: rgb(128, 64, 0);
-        border-radius: 100px 100px 0px 0px;
-        height: 100%;
-        width: 10%;
-        position: absolute;
-        top: 100%;
-        background-image: url("/images/mole.png");
-        background-size: 100%;
-        background-repeat: no-repeat;
-        background-position: 0% 5%; 
-            }
-        .left_ear{
-        background-color: rgb(128, 64, 0);
-        border-radius: 100px;
-        position: absolute;
-        left: 0px;
-        float: left;
-        min-width: 30%;
-        padding-top: 30%;
-        z-index: -1;
-        }
-.right_ear{
-        background-color: rgb(128, 64, 0);
-        border-radius: 100px;
-        position: absolute;
-        left: 0px;
-        float: right;
-        min-width: 30%;
-        padding-top: 30%;
-        left: 70%
-        }
-
-        #mole1 { left: 10%;}
-        #mole2 { left: 45%;} 
-        #mole3 { left: 80%;}
 
         </STYLE>
-    <script> 
-        jQuery(document).ready(function(){
-
-        });
-    </script>
     
         <title>WAK-A-MOLE</title>
 
-
-
 </head>
 <body>
+ <h2>Your score:</h2>
+ 
+ <h2 id="score"></h2>
+<h2>Time Left:</h2>
+<h2 id="time-left">60/h2>
+ 
     <div class="mole" id="mole1"> <div class="left_ear"><div class="right_ear"></div></div>
     <div class="mole" id="mole2"><div class="left_ear">
         <div class="right_ear"> </div>
