--- a/whack-a-mole/index.html
+++ b/whack-a-mole/index.html
@@ -7,16 +7,14 @@
     <title>WAK-A-MOLE</title>
     <link rel="stylesheet" href="styles.css">
 
-    
-
-
 </head>
 <body>
- <h2>Your score:</h2>
  
- <h2 id="score"></h2>
+    <h2>Your score:</h2>
+
+<h2 id="score"></h2>
 <h2>Time Left:</h2>
-<h2 id="time-left">60/h2>
+<h2 id="time-left">60</h2>
  
     <div class="mole" id="mole1"> <div class="left_ear"><div class="right_ear"></div></div>
     <div class="mole" id="mole2"><div class="left_ear">
